[tool.poetry]
name = "rl-mario"
version = "0.1.0"
description = "This repository contains a reinforcement learning project focused on the Super Mario Bros game. The aim is to develop an AI agent capable of playing the game, using reinforcement learning techniques and algorithms."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"
gym-super-mario-bros = "^7.4.0"
pyglet = "^2.0.14"
stable-baselines3 = "^2.3.0"
opencv-python = "^4.9.0"
gym = "0.26.0"
tensorflow = "2.14.0"
tensordict = "0.3.0"
torchrl = "0.3.0"
torch = "2.3.0"
torchvision = "^0.18.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"